(executables
 (public_names
  main
  approx_pi
  cardioid
  mandelbrot
  sieve
  plot
  copy_file
  draw
  radix
  tac
  turtle
  music
  quad
  queens)
 (names
  main
  approx_pi
  cardioid
  mandelbrot
  sieve
  plot
  copy_file
  draw
  radix
  tac
  turtle
  music
  quad
  queens)
 (libraries lib graphics))

(env
 (dev
  (flags :standard -warn-error -27-32-37)))
