(library
 (name lib)
 (modules
  bit_vectors
  persistent_array
  resizeable_array
  ropes
  binary_search_tree
  avl_tree
  hash_table
  prefix_tree
  patricia_tree
  queues
  priority_queues
  adjacency_matrix
  adjacency_list
  adjacency_dictionaries))

(include_subdirs unqualified)

(env
 (dev
  (flags :standard -warn-error -27-32-37)))
